comments cleaned up

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<!--========================Header Starts======================================-->
+<!--Header Start-->
 
 	<div class="header">
 		
